[metadata]
name = iaea-learners
version = 0.8.0
description = Webinterface for accessing CR exercises.
long_description = file: README.md
long_description_content_type = text/markdown
license = CC BY-SA 3.0 IGO
platforms = any
author = IAEA/AIT
url = http://github.com/iaeaorg/learners/
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    colorlog==6.8.0
    Flask==2.3.2
    Flask_Cors==3.0.10
    Flask_JWT_Extended==4.4.4
    flask_sqlalchemy==3.0.5
    Requests==2.31.0
    SQLAlchemy==2.0.11
    strictyaml==1.7.3
    Werkzeug==2.3.6
    black==23.3.0
    build==0.10.0
    flake8==6.0.0
    gevent==22.10.2
    gunicorn==20.1.0
    python-dotenv==1.0.0
    strictyaml==1.7.3

[flake8]
max-line-length = 142
exclude =
    ./backend/__main__.py
    ./backend/routes/__init__.py
